# OZ_A2M

./: .env.example  .gitignore  ANT_COLONY_SETUP.md  CLAUDE.md  DEPLOYMENT.md  README.md  REBOOT_RECOVERY_GUIDE.md  backup_pre_reboot.json  docker-compose.elasticsearch.yml  docker-compose.monitoring.yml  docker-compose.yml  oz_a2m_control.py  pyproject.toml
.deprecated/dashboard_20260403/: ceo_dashboard.html  ceo_dashboard.py  ceo_dashboard_server.py  dashboard_reward_integration.py  tui_dashboard.py
.github/workflows/: ci.yml
OZ_Central/scripts/: wallet_encryptor.py
config/: ant-colony.json
config/mosquitto/: mosquitto.conf
config/pi-mono/: README.md  config.json
dashboard/: Dockerfile  docker-compose.yml  index.html  main.py  oz-a2m-dashboard.service  requirements.txt
data/: capital_allocations.json  profit_tracking.db  rpg_states.json  strategy_performance.db  vault_records.json
department_1/: Dockerfile
department_7/: Dockerfile  manager.py
docs/: BUILD_PROMPTS.md  DASHBOARD_7DEPARTMENTS_DESIGN.md  DASHBOARD_REVIEW_REPORT.md  ELASTICSEARCH_SETUP.md  FREQTRADE_LEARNINGS.md  NETDATA_SETUP.md  NETWORK_SOLUTION_SUMMARY.md  OPENCLAW_INTEGRATION.md  OPERATIONS.md  OZ_A2M_MASTER.md  PRODUCTION_IMPLEMENTATION_COMPLETE.md  SKILLS_DEPLOYMENT.md  SMART_AI_ROUTER_IMPLEMENTED.md  dashboard_setup.md
jito/: README.md
lib/cache/: __init__.py  (+1 more)
mvp/: docker-compose.yml
occore/: __init__.py
phase7/: README.md
scripts/: bot_health_monitor.py  cleanup_old_data.sh  deploy_pi_mono.sh  deploy_reward_system.sh  enable_reward_system.py  fix_bots_and_resume_trading.py  register_oza2m_watchdog.py  run_phase7.py  start_all_departments.sh  start_oza2m.sh  stop_all_departments.sh  verify_environment.py
shared/: rpc_manager.py
skills/: SKILL.md
tests/: test_arbitrage_bot.py  test_control_tower.py  test_dept2_verification.py  test_devops.py  test_elasticsearch_audit.py  test_funding_arb_bots.py  test_grid_dca_bots.py  test_hyperliquid_ibkr_bots.py  test_kafka_eventbus.py  test_llm_routing.py  test_market_maker.py  test_netdata.py  test_opentelemetry.py  test_p1_integration.py  test_pnl.py  test_process_mining.py  test_ray_engine.py  test_rewards.py  test_rpa_automation.py  test_scalper_bybit.py  test_security.py  test_security_team.py  test_strategy_db.py  test_temporal_workflow.py  test_trend_follower.py  test_verification.py  test_wallet_connection.py  test_websocket_bridge.py
(+237 files in other folders)
