[build-system]
requires = ["hatchling"]
build_backend = "hatchling.build"

[project]
name = "oz-a2m"
version = "0.1.0"
description = "OZ_A2M - AI-Powered Multi-Agent Trading System"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "OzzyHA Company", email = "admin@ozzyha.com"}
]
keywords = ["trading", "ai", "multi-agent", "algorithmic-trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",
    "aiomqtt>=2.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "elasticsearch>=8.12.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "ccxt>=4.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "aiohttp>=3.9.0",
    "cachetools>=5.3.0",
    "kafka-python-ng>=2.2.0",
    # OpenTelemetry
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-instrumentation-kafka-python>=0.43b0",
    # Temporal
    "temporalio>=1.5.0",
]

[project.optional-dependencies]
trading = [
    "freqtrade>=2024.2",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta-lib>=0.4.28",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
test = [
    "playwright>=1.41.0",
    "factory-boy>=3.3.0",
    "faker>=23.0.0",
]
all = ["oz-a2m[trading,dev,test]"]

[project.scripts]
oz-a2m = "oz_a2m.cli:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
